--- a/style.css
+++ b/style.css
@@ -99,12 +99,17 @@
     font-weight: bold;
 }
 
-.name::first-letter:nth-child(1){
-    color: red;
+#profile-img{
+    border-radius: 100%;
 }
 
-.name::first-letter:nth-child(2){
-    color: grey;
+.title{
+    font-size: 64px;
+    font-weight: bold;
+}
+
+.table-text{
+    font-size: 18px;
 }
 
 @media (max-width: 1455px) {
