--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ nav{
     color: white;
     margin-top: 5px;
     background-color: var(--secondary);
+    text-decoration: none;
 }
 
 .btn-contact{
@@ -203,6 +204,32 @@ nav{
     font-weight: bold;
 }
 
+@media (max-width: 1600px) {
+    .img-col{
+        margin-right: 5em;
+    }
+}
+
+@media (max-width: 1285px) {
+    .full-role p{
+        font-size: 32px;
+    }
+    .carousel-img{
+        width: 48em;
+        height: 27em;
+    }
+}
+
+@media (max-width: 1000px) {
+    .full-name p{
+        font-size: 48px;
+    }
+    .carousel-img{
+        width: 32em;
+        height: 18em;
+    }
+}
+
 @media (max-width: 1455px) {
     .nav-logo{
         font-size: 96px;
@@ -217,6 +244,49 @@ nav{
 
 @media (max-width: 930px) {
     .nav-logo{
-        font-size: 32px;
+        font-size: 52px;
+    }
+    .img-col{
+        margin-right: 6em;
+    }
+    .full-role p{
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 767px){
+    .nav-logo{
+        font-size: 128px;
+    }
+    #logo-h{
+        margin-left: 1em;
+    }
+    .btn-nav{
+        width: 30em;
+        height: 5em;
+    }
+}
+
+@media (max-width: 550px){
+    .nav-logo{
+        font-size: 96px;
+    }
+    .btn-nav{
+        width: 20em;
+        height: 5em;
+    }
+    .carousel-img{
+        width: 20em;
+        height: 12em;
+    }
+}
+
+@media (max-width: 380px){
+    .nav-logo{
+        font-size: 72px;
+    }
+    .btn-nav{
+        width: 15em;
+        height: 5em;
     }
 }
